2010-05-05  MORITA Hajime  <morrita@google.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=38150
        Refactoring: webkitEditableContentChangedEvent should be handled by the owner of appropriate the renderer.

        Moved a part of code chunk in HTMLFormControlElementWithState::defaultEventHandler()
        which accesses the renderer from foreign node,
        to TextControlInnerTextElement::defaultEventHandler() which owns the renderer.

        No new tests. No behavioral change.

        * html/HTMLFormControlElement.cpp:
        (WebCore::HTMLFormControlElementWithState::defaultEventHandler):
        * html/HTMLFormControlElement.h:
        * html/HTMLInputElement.h:
        * html/HTMLTextAreaElement.h:
        * rendering/TextControlInnerElements.cpp:
        (WebCore::TextControlInnerTextElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/50111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58864 268f45cc-cd09-0410-ab3c-d52691b4dbfc