WebCore/html/HTMLTextAreaElement.h
@@ -60,7 +60,6 @@ public:
     virtual RenderObject* createRenderer(RenderArena*, RenderStyle*);
     virtual bool appendFormData(FormDataList&, bool);
     virtual void reset();
-    virtual void defaultEventHandler(Event*);
     virtual bool isMouseFocusable() const;
     virtual bool isKeyboardFocusable(KeyboardEvent*) const;
     virtual void updateFocusAppearance(bool restorePreviousSelection);
@@ -103,6 +102,8 @@ private:
 
     virtual bool isOptionalFormControl() const { return !isRequiredFormControl(); }
     virtual bool isRequiredFormControl() const { return required(); }
+
+    virtual void defaultEventHandler(Event*);
 
     int m_rows;
     int m_cols;
